fix spacing

--- a/src/components/App/style/form.scss
+++ b/src/components/App/style/form.scss
@@ -203,6 +203,6 @@
   }
 }
 
-.no-padding {
-  padding: 0 !important;
+.no-bottom-margin {
+  margin-bottom: 0 !important;
 }
